--- a/apps/aritzia-scanner/src/views/index.ejs
+++ b/apps/aritzia-scanner/src/views/index.ejs
@@ -28,36 +28,22 @@
             loading="lazy"
           />
           <% } else { %>
-          <span style="color: #999">No Image</span>
+          <span class="no-image-placeholder">No Image</span>
           <% } %>
         </a>
         <div class="product-info">
           <a href="<%= link %>" class="product-name"><%= product.name %></a>
           <% if (product.price) { %>
-          <div class="product-price" style="margin-bottom: 5px">
+          <div class="product-price-container">
             <% if (product.price < product.list_price) { %>
-            <span style="color: #d9534f; font-weight: bold"
-              >$<%= product.price %></span
-            >
-            <span
-              style="
-                text-decoration: line-through;
-                color: #999;
-                font-size: 0.9em;
-              "
-              >$<%= product.list_price %></span
-            >
+            <span class="price-sale">$<%= product.price %></span>
+            <span class="price-list">$<%= product.list_price %></span>
             <% } else { %>
             <span>$<%= product.price %></span>
             <% } %>
           </div>
           <% } %> <% if (subtext) { %>
-          <div
-            class="variant-details"
-            style="font-size: 0.9em; color: #555; margin-bottom: 5px"
-          >
-            <%= subtext %>
-          </div>
+          <div class="variant-details"><%= subtext %></div>
           <% } %> <% if (product.added_at_formatted) { %>
           <div class="product-meta">
             Added <%= product.added_at_formatted %>
@@ -84,40 +70,24 @@
             loading="lazy"
           />
           <% } else { %>
-          <span style="color: #999">No Image</span>
+          <span class="no-image-placeholder">No Image</span>
           <% } %>
         </a>
         <div class="product-info">
           <a href="<%= link %>" class="product-name"><%= product.name %></a>
           <% if (product.price) { %>
-          <div class="product-price" style="margin-bottom: 5px">
+          <div class="product-price-container">
             <% if (product.price < product.list_price) { %>
-            <span style="color: #d9534f; font-weight: bold"
-              >$<%= product.price %></span
-            >
-            <span
-              style="
-                text-decoration: line-through;
-                color: #999;
-                font-size: 0.9em;
-              "
-              >$<%= product.list_price %></span
-            >
+            <span class="price-sale">$<%= product.price %></span>
+            <span class="price-list">$<%= product.list_price %></span>
             <% } else { %>
             <span>$<%= product.price %></span>
             <% } %>
           </div>
           <% } %> <% if (subtext) { %>
-          <div
-            class="variant-details"
-            style="font-size: 0.9em; color: #555; margin-bottom: 5px"
-          >
-            <%= subtext %>
-          </div>
+          <div class="variant-details"><%= subtext %></div>
           <% } %>
-          <div style="color: #d9534f; font-weight: bold; font-size: 0.9em">
-            Discontinued
-          </div>
+          <div class="discontinued-badge">Discontinued</div>
           <% if (product.added_at_formatted) { %>
           <div class="product-meta">
             Added <%= product.added_at_formatted %>
@@ -128,19 +98,8 @@
       <% }); %>
     </div>
     <% } %> <% if (showAllLink) { %>
-    <div style="margin-top: 30px; text-align: center">
-      <a
-        href="/products"
-        style="
-          display: inline-block;
-          padding: 10px 20px;
-          background: #000;
-          color: #fff;
-          text-decoration: none;
-          border-radius: 4px;
-        "
-        >View All Products</a
-      >
+    <div class="view-all-container">
+      <a href="/products" class="view-all-button">View All Products</a>
     </div>
     <% } %>
   </body>
