--- a/apps/aritzia-scanner/src/views/partials/nav.ejs
+++ b/apps/aritzia-scanner/src/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <div class="nav">
   <a href="/">Home (Newest)</a>
   <a href="/products">All Products</a>
-  <a href="/sale" style="color: #d9534f; font-weight: bold">Sale</a>
+  <a href="/sale" class="nav-sale-link">Sale</a>
   <a href="/colors">Colors</a>
   <a href="/discontinued">Discontinued</a>
 </div>
