--- a/apps/aritzia-scanner/src/views/variant.ejs
+++ b/apps/aritzia-scanner/src/views/variant.ejs
@@ -77,7 +77,7 @@
           >
           <% if (!v.isActive) { %>
           <br />
-          <small style="color: #d9534f; font-weight: bold">Discontinued</small>
+          <small class="discontinued-badge">Discontinued</small>
           <% } %>
         </div>
         <% }); %>
@@ -85,7 +85,7 @@
     </div>
 
     <h2>Images</h2>
-    <div class="images">
+    <div class="images-grid">
       <% if (images && images.length > 0) { %> <% images.forEach(image => { %>
       <div class="image-container">
         <a href="/api/images/<%= image.id %>" target="_blank">
